src/test/ui/recursion/issue-26548-recursion-via-normalize.stderr
error[E0391]: cycle detected when computing layout of `core::option::Option<<S as Mirror>::It>`
   |
   = note: ...which requires computing layout of `core::option::Option<S>`...
   = note: ...which requires computing layout of `S`...
   = note: ...which again requires computing layout of `core::option::Option<<S as Mirror>::It>`, completing the cycle
note: cycle used when checking deathness of variables in top-level module
  --> $DIR/issue-26548-recursion-via-normalize.rs:6:1
   |
LL | / trait Mirror {
LL | |
LL | |     type It: ?Sized;
LL | | }
...  |
LL | |     let _s = S(None);
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
